namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-workload
  labels:
    name: demo-workload
